--- a/test/Admin.Tabler.Hosting/Views/_ViewImports.cshtml
+++ b/test/Admin.Tabler.Hosting/Views/_ViewImports.cshtml
@@ -4,3 +4,5 @@
 @using NetCoreStack.Mvc.Extensions
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
