--- a/test/Admin.Tabler.Hosting/Views/Shared/_Layout.cshtml
+++ b/test/Admin.Tabler.Hosting/Views/Shared/_Layout.cshtml
@@ -121,44 +121,12 @@
             </div>
 
             <div class="my-3 my-md-5">
-                <div class="container">
+                <div class="container container-wrapper">
                     @RenderBody()
                 </div>
             </div>
 
         </div>
-        @*<div class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8">
-                        <div class="row">
-
-                            <div class="col-6 col-md-3">
-                                <ul class="list-unstyled mb-0">
-                                    <li><a href="#">Third link</a></li>
-                                    <li><a href="#">Fourth link</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-6 col-md-3">
-                                <ul class="list-unstyled mb-0">
-                                    <li><a href="#">Fifth link</a></li>
-                                    <li><a href="#">Sixth link</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-6 col-md-3">
-                                <ul class="list-unstyled mb-0">
-                                    <li><a href="#">Other link</a></li>
-                                    <li><a href="#">Last link</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 mt-4 mt-lg-0">
-                        Premium and Open Source dashboard template with responsive and high quality UI. For Free!
-                    </div>
-                </div>
-            </div>
-        </div>*@
 
         <footer class="footer">
             <div class="container">
@@ -187,7 +155,6 @@
 
     </div>
 
-    <script src="//rawgit.com/saribe/eModal/master/dist/eModal.min.js"></script>
     @RenderSection("Scripts", required: false)
     @Html.UseNotification()
 
